src/tests/string_expression/snapshots/monkey_interpreter__tests__string_expression__test_string_expression_case_1_environment.snap
---
source: src/tests/string_expression/mod.rs
expression: evaluator
---
Evaluator {
    environment: Environment {
        current: Scope {
            variables: {},
            enclosing: None,
        },
    },
}
