src/tests/string_expression/snapshots/monkey_interpreter__tests__string_expression__test_string_expression_case_1_lexical_analysis.snap
---
source: src/tests/string_expression/mod.rs
assertion_line: 15
expression: tokens
---
[
    PositionedToken {
        token: String {
            literal: "this is a string",
        },
        position: Position {
            line: 1,
            column: 1,
        },
    },
]
