src/tests/string_expression/snapshots/monkey_interpreter__tests__string_expression__test_string_expression_case_1_syntax_analysis.snap
---
source: src/tests/string_expression/mod.rs
expression: abstract_syntax_tree
---
[
    Expression {
        expression: String {
            literal: "this is a string",
        },
    },
]
