src/tests/string_expression/snapshots/monkey_interpreter__tests__string_expression__test_string_expression_case_2_evaluator.snap
---
source: src/tests/string_expression/mod.rs
expression: evaluation
---
String {
    value: "line1\nline2\n",
}
