src/tests/string_expression/snapshots/monkey_interpreter__tests__string_expression__test_string_expression_case_3_environment.snap
---
source: src/tests/string_expression/mod.rs
expression: evaluator
---
Evaluator {
    environment: Environment {
        variables: {},
        sub_environment: None,
    },
}
