src/tests/string_expression/snapshots/monkey_interpreter__tests__string_expression__test_string_expression_case_3_evaluator.snap
---
source: src/tests/string_expression/mod.rs
expression: evaluation
---
String {
    value: "column-1\tcolumn-2\n",
}
